--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,19 +1,25 @@
 version: 2.1
 
-orbs:
-  node: circleci/node@5.2
-
 workflows:
-  sample:
+  version: 2
+  build:
     jobs:
-      - node/test:
-          version: '16.10'   # Node version
-          pkg-manager: npm
-          steps:
-            - checkout       # Pulls your repo
-            - run:
-                name: Install dependencies
-                command: npm install
-            - run:
-                name: Run tests (if any)
-                command: npm test || echo "No tests found"
+      - build:
+          filters:
+            branches:
+              only:
+                - main
+
+jobs:
+  build:
+    working_directory: ~/ExampleApplication
+    docker:
+      - image: circleci/node:10.16.3
+    steps:
+      - checkout
+      - run:
+          name: update-npm
+          command: 'sudo npm install -g npm@5'
+      - run:
+          name: install-npm
+          command: npm install
